@@ -1,5 +1,6 @@
 Changelog for HLint
 
+    #???, rework the when/unless hints, don't suggest on itself
     Add duplicate detector, for copy/pasted code
     #???, don't show duplicate filepath separators
     If the user enters directories containing no files then say
